--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ header{
 	margin:20px;
 	box-shadow:inset 0px 0px 60px 6px rgba(0,0,0,0.9);
 	border-radius:15px;
-	background-image:url('http://i68.tinypic.com/jichlz.png');
+	background-image:url('../img/placeholder.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position:center;
